# BurgerBackend

./: .gitignore  Cargo.toml  README.md
src/: crypto.rs  errors.rs  filters.rs  handlers.rs  main.rs  models.rs
src/crypto/: authn.rs  pwhash.rs
src/filters/: helpers.rs  middleware.rs
templates/: error.html  header.html  index.html
templates/restaurants/: detail.html  list.html  review.html
templates/user/: check.html  list.html  login.html  profile.html  register.html
workspace/: current.dsl  future.dsl  model.dsl
