[package]
name = "burger"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0.43"
argon2 = "0.3.0"
askama = "0.10.5"
askama_warp = "0.11.0"
base64 = "0.13.0"
bytes = "1.1.0"
chrono = "0.4.19"
ed25519-dalek = "1.0.1"
futures = { version = "0.3.17", default-features = false }
once_cell = "1.8.0"
rand_core = { version = "0.5.1", features = ["std"] }
rust-crypto = "0.2.36"
serde = { version = "1.0.130", features = ["derive"] }
thiserror = "1.0.29"
tokio = { version = "1.11.0", features = ["full"] }
tracing = "0.1.26"
tracing-subscriber = "0.2.20"
warp = "0.3.1"
